TPRUN-1328 Restrict JMX and SSH access to localhost.

--- a/talend-esb/src/main/distribution/text/container/etc/org.apache.karaf.shell.cfg
+++ b/talend-esb/src/main/distribution/text/container/etc/org.apache.karaf.shell.cfg
@@ -25,24 +25,34 @@
 #
 # Via sshPort and sshHost you define the address you can login into Karaf.
 #
-sshPort = 8101
-sshHost = 0.0.0.0
+sshPort = ${env:ORG_APACHE_KARAF_SSH_SSHPORT:-8101}
+sshHost = ${env:ORG_APACHE_KARAF_SSH_SSHHOST:-127.0.0.1}
 
 #
 # The sshIdleTimeout defines the inactivity timeout to logout the SSH session.
 # The sshIdleTimeout is in milliseconds, and the default is set to 30 minutes.
 #
-sshIdleTimeout = 1800000
+sshIdleTimeout = ${env:ORG_APACHE_KARAF_SSH_SSHIDLETIMEOUT:-1800000}
+
+#
+# Define the number of the NIO workers for the sshd server. Default is 2.
+#
+#nio-workers = 2
+
+#
+# Define the maximum number of SSH sessions. Default is unlimited.
+#
+#max-concurrent-sessions = -1
 
 #
 # sshRealm defines which JAAS domain to use for password authentication.
 #
-sshRealm = karaf
+sshRealm = ${env:ORG_APACHE_KARAF_SSH_SSHREALM:-karaf}
 
 #
 # Defines if the SFTP system is enabled or not in the SSH server
 #
-sftpEnabled=true
+sftpEnabled = ${env:ORG_APACHE_KARAF_SSH_SFTPENABLED:-true}
 
 #
 # The location of the hostKey file defines where the private/public key of the server
@@ -59,7 +69,7 @@ hostKeyFormat = simple
 #
 # shRole defines the role required to access the console through ssh
 #
-sshRole = admin
+sshRole = ${env:ORG_APACHE_KARAF_SSH_SSHROLE:-admin}
 
 #
 # Self defined key size in 1024, 2048, 3072, or 4096
@@ -80,7 +90,7 @@ sshRole = admin
 # 3: DEBUG
 # 4: TRACE
 #
-#logLevel=1
+#logLevel = 1
 
 #
 # Specify an additional welcome banner to be displayed when a user logs into the server.
@@ -98,6 +108,7 @@ sshRole = admin
 # This property define the default value when you use the Karaf shell console.
 # You can change the completion mode directly in the shell console, using shell:completion command.
 #
+completionMode = ${env:ORG_APACHE_KARAF_SHELL_COMPLETIONMODE:-GLOBAL}
 
 #
 # Override allowed SSH cipher algorithms.
@@ -122,6 +133,4 @@ sshRole = admin
 # Default: moduli-url not specified to use the internal one from SSHD
 #
 # moduli-url = external moduli-url users wanna use
-
-completionMode = GLOBAL
 
